# ModularRobotSystemToolKit

./: .gitignore  README.md  setup.sh
gazebo/models/SMORES_MODULE/: SMORES_MODULE.sdf  model.config
gazebo/plugins/model/SMORES_MODULE_controller/: CMakeLists.txt  SMORES_MODULE_controller.cc  SMORES_MODULE_controller.hh
unity3d/: .gitignore  UpgradeLog.htm
unity3d/Assets/: Frame.physicMaterial  ground.unity  robot.conf
unity3d/Assets/Materials/: Back.mat  DefaultMaterial.mat  Front.mat  Left.mat  Right.mat  ice.physicMaterial
unity3d/Assets/Prefabs/: ButtonBehavior.prefab  ButtonRobotStateObject.prefab  DummySMORES.prefab  HeadLight.prefab  SMORES.prefab  SMORES_BIG.prefab  SMORES_old.prefab  SensorCamera.prefab
unity3d/Assets/SMORES/: BackPlate.dae  Body.dae  FrontWheel.dae  LeftWheel.dae  RightWheel.dae
unity3d/Assets/SMORES_MODULE/: BackFrame.dae  BackPlate.dae  Body.dae  FrontFrame.dae  FrontWheel.dae  LeftWheel.dae  RightWheel.dae  SMORES_MODULE.prefab  Wheel.dae
unity3d/Assets/Scences/: BehaviorDesigner.unity  Designer.unity  SelectLevel.unity
unity3d/Assets/Scenes/: Designer.unity  SMORES.unity  SMORES_unity_object.unity  walkbot.unity
unity3d/Assets/Scripts/: ArmControl.cs  BehaviorDesigner.cs  ButtonBehaviorController.cs  CameraController.cs  CanvasModuleSettingController.cs  CarController.cs  ColorManager.cs  CreateScrollList.cs  Designer.cs  DesignerController.cs  FileSelectionManager.cs  InputController.cs  MenuManager.cs  (+15 more)
unity3d/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+111 files in other folders)
